contact section white space bug fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -766,9 +766,17 @@ input::-webkit-inner-spin-button {
 @media screen and (max-width: 992px) {
     .contact {
         background-size: auto;
+        overflow-x: hidden;
+    }
+
+    .contact .row{
+        margin: 0;
+        padding: 0;
+    }
+    form {
+        max-width: 30rem;
     }
     .contact-paragraph {
-        margin: 3rem auto;
     }
     .contact form {
         margin-bottom: 1rem;
@@ -791,4 +799,14 @@ input::-webkit-inner-spin-button {
     .contact-heading {
         font-size: 5rem;
      }
+
+     .contact form input,  .contact form textarea{
+        width: 30rem;
+        margin: 1rem auto;
+    }
+
+    .contact-info {
+        width: 30rem;
+
+    }
 }
